--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,7 @@ os:
   - osx
 
 script:
- - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
- - sudo apt-get update -y
-
- - sudo apt-get install gcc-6 g++-6 -y
- - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 60
- - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 60
- - sudo update-alternatives --config gcc
- - sudo update-alternatives --config g++
- - sudo apt-get install gcc-6-multilib g++-6-multilib
+ - bash script/install-travis.sh
 
  - make -f Bootstrap.mak $TRAVIS_OS_NAME
  - bin/release/premake5 test
