--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,12 @@ script:
  - make -f Bootstrap.mak $TRAVIS_OS_NAME
  - bin/release/premake5 test
 
+deploy:
+  description: 'ZPM Release'
+  provider: GitHub
+  auth_token: $env:GH
+  artifact: bin/release/premake5
+  draft: true
+  prerelease: false
+  on:
+    appveyor_repo_tag: true 
