--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,7 +19,8 @@ test_script:
 deploy:
   description: 'ZPM Release'
   provider: GitHub
-  auth_token: "$env:GH"
+  auth_token: 
+    secure: HHv48+XIpc9KD99ksjlsM2E7rQmpJ8xktezISBJi3Qu+w4uVMpoUNumDBQpk9fUq
   artifact: bin/release/premake5
   draft: true
   prerelease: false
