--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,14 +15,18 @@ build_script:
 test_script:
   - cmd: bin\release\premake5 test
 
+artifacts:
+  - path: bin\release\premake5
+    name: premake
 
 deploy:
   description: 'ZPM Release'
   provider: GitHub
   auth_token: 
     secure: HHv48+XIpc9KD99ksjlsM2E7rQmpJ8xktezISBJi3Qu+w4uVMpoUNumDBQpk9fUq
-  artifact: bin\release\premake5
+  artifact: premake
   draft: true
+  force_update: true
   prerelease: false
   on:
-    appveyor_repo_tag: true 
+    appveyor_repo_tag: true
