--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ script:
 deploy:
   - provider: releases
     api_key: $GH
-    draft: true
+    tag_name: $TRAVIS_TAG
     file: bin/release/premake5
     skip_cleanup: true
     on:
       tags: true
   - provider: releases
     api_key: $GH
-    tag_name: development
+    tag_name: $TRAVIS_TAG
     draft: true
     file: bin/release/premake5
     skip_cleanup: true
