--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,16 @@ script:
 deploy:
   - provider: releases
     api_key: $GH
-    tag_name: $TRAVIS_TAG
+    draft: true
+    overwrite: true
     file: bin/release/premake5
     skip_cleanup: true
     on:
       tags: true
   - provider: releases
     api_key: $GH
-    tag_name: $TRAVIS_TAG
+    name: development
+    overwrite: true
     draft: true
     file: bin/release/premake5
     skip_cleanup: true
