--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,14 @@ script:
   - make -f Bootstrap.mak $TRAVIS_OS_NAME
   - bin/release/premake5 test
 
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; tar -zcvf premake-linux.tar.gz bin/release/premake5;  then elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then tar -zcvf premake-macosx.tar.gz bin/release/premake5; fi
 deploy:
   provider: releases
   api_key: $GH
   draft: true
   overwrite: true
-  file: bin/release/premake5
+  file: *.zip
+  file_glob: true
   skip_cleanup: true
   on:
     tags: true
