--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   api_key: $GH
   draft: true
   overwrite: true
-  file: *.zip
+  file: *.tar.gz
   file_glob: true
   skip_cleanup: true
   on:
