--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - make -f Bootstrap.mak $TRAVIS_OS_NAME
   - bin/release/premake5 test
 
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; tar -zcvf premake-linux.tar.gz bin/release/premake5; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then tar -zcvf premake-linux.tar.gz bin/release/premake5; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then tar -zcvf premake-macosx.tar.gz bin/release/premake5; fi
 deploy:
   provider: releases
