--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ deploy:
   api_key: $GH
   draft: true
   overwrite: true
+  name: "$TRAVIS_TAG"
   file: "*.tar.gz"
   file_glob: true
   skip_cleanup: true
