--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
   draft: true
   overwrite: true
   name: "$TRAVIS_TAG"
+  target_commitish: "$TRAVIS_TAG"
   file: "*.tar.gz"
   file_glob: true
   skip_cleanup: true
