--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
   overwrite: true
   name: "$TRAVIS_TAG"
   tag_name: "$TRAVIS_TAG"
-  file: "*.tar.gz"
+  file: "bin/release/*.tar.gz"
   file_glob: true
   skip_cleanup: true
   on:
