--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ script:
   - make -f Bootstrap.mak $TRAVIS_OS_NAME
   - make -C build/bootstrap -j config=debug
   - bin/release/premake5 test
+  - bin/debug/premake5 test
 
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then (cd bin/release; tar -zcvf premake-linux.tar.gz premake5; cd ../..) fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then (cd bin/release; tar -zcvf premake-macosx.tar.gz premake5; cd ../..) fi
