--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,7 @@
-language: c++
-dist: trusty
-sudo: false
+os:
+  - linux
+  - osx
 sudo: required
-  include:
-  # Linux Debug
-    - os: linux
-      compiler: gcc
-      env:
-        - CONFIGURATION=debug
-  # Linux Release
-    - os: linux
-      compiler: gcc
-      env:
-        - CONFIGURATION=release
-  # macOS Debug x86
-    - os: osx
-      osx_image: xcode9
-      env:
-        - CONFIGURATION=debug
-  # macOS Release x86
-    - os: osx
-      osx_image: xcode9
-      env:
-        - CONFIGURATION=release
 script:
   - make -f Bootstrap.mak $TRAVIS_OS_NAME
   - make -C build/bootstrap -j config=debug
