--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,14 +2,11 @@ os: Visual Studio 2015
 
 platform:
   - Win32
-  - x64
-
-configuration:
-  - Debug
-  - Release
 
 before_build:
   - cmd: git clean -ffxd
+  - cmd: git submodule sync
+  - cmd: git submodule update --init
 
 build_script:
   - cmd: call "%VS140COMNTOOLS%\..\..\VC\vcvarsall.bat"
@@ -21,7 +18,7 @@ build_script:
   - cmd: cd ../../
 
 test_script:
-  - cmd: bin\%CONFIGURATION%\premake5 test
+  - cmd: bin\release\premake5 test
 
 artifacts:
   - path: bin\release\premake-windows.zip
